tests/fixtures/pass/async_closure_gather_vm.walrus
import "std/async" as asyncx;

let make = async : x { return x * 10; };
let tasks = [make(0), make(1), make(2)];

println(await asyncx.gather(tasks));
