tests/fixtures/fail/stdlib/stdlib_async_gather_non_task_vm.walrus
import "std/async" as asyncx;

let mixed = asyncx.gather([1]);
println(await mixed);
